Fri Apr  5 20:19:42 2013  Tanaka Akira  <akr@fsij.org>

	* addr2line.c: include ruby/missing.h to fix compile error on Debian.

Fri Apr  5 19:39:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): fix of defined? with empty
	  expression.  [ruby-core:53999] [Bug #8220]

Fri Apr  5 13:22:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/curses/curses.c (Init_curses): fix implementation function,
	  crmode should be same as cbreak.  [ruby-core:54013] [Bug #8222]

Fri Apr  5 12:06:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/curses/hello.rb: Typo in Curses example by Drew Blas
	  [Fixes GH-273]

Thu Apr  4 23:45:13 2013  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (bind_random_port): Rescue EACCES for SunOS.
	  bind() on SunOS for port 2049 (nfs) and 4045 (lockd) causes
	  EACCES with unprivileged process.  cf. PRIV_SYS_NFS in privileges(5)
	  [ruby-core:48064] [Bug #7183] reported by Frank Meier.

Thu Apr  4 23:24:45 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: Remove condition for bcc.

Thu Apr  4 22:53:23 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (FIX2LONG): Parenthesize the macro body.

Thu Apr  4 22:32:32 2013  Tanaka Akira  <akr@fsij.org>

	* time.c (time_strftime): Describe %L and %N truncates digits under
	  the specified length.
	  [ruby-core:52130] [Bug #7829]

Thu Apr  4 22:08:46 2013  Tanaka Akira  <akr@fsij.org>

	* object.c (rb_mod_cvar_set): Reverted "avoid inadvertent
	  symbol creation" to avoid SEGV by
	  Class.new.class_variable_set(1, 2).

Thu Apr  4 20:07:19 2013  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_write): New method.
	  (path_binwrite): Ditto.
	  [ruby-core:49468] [Feature #7378]

Thu Apr  4 16:51:29 2013  Yuki Yugui Sonoda  <yugui@google.com>

	* thread_pthread.c: Fixes wrong scopes of #if USE_SLEEPY_TIMER_THREAD
	  .. #endif sections.  This fixes a build error on NativeClient.
