@@ -114,6 +114,10 @@ void xfree(void*);
 #define STRINGIZE0(expr) #expr
 #endif
 
+#ifdef HAVE_LONG_LONG 1
+# define HAVE_TRUE_LONG_LONG 1
+#endif
+
 #if SIZEOF_LONG_LONG > 0
 # define LONG_LONG long long
 #elif SIZEOF___INT64 > 0
